[package]
name = "csv-import-demo-rust"
version = "0.1.0"
authors = ["Carlos Castellanos Vera <ccverak@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2.2"
actix-web = "1.0.0"
actix-files = "0.1.1"
actix-session = "0.1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"